# AlexASI

./: .gitignore  CMakeLists.txt  README.md
cmake-dbg-msvc32/: AlexASI.cbp
cmake-dbg-msvc32/projects/stub/: AlexASI_stub.cbp  stub.cbp
cmake-dbg-msvc64/: AlexASI.cbp
cmake-dbg-msvc64/projects/stub/: AlexASI_stub.cbp  stub.cbp
cmake-rel-msvc32/: AlexASI.cbp
cmake-rel-msvc32/projects/stub/: AlexASI_stub.cbp  stub.cbp
cmake-rel-msvc64/: AlexASI.cbp
cmake-rel-msvc64/projects/stub/: AlexASI_stub.cbp  stub.cbp
projects/AlexASI/: AlexASI.c  AlexASI.h  CMakeLists.txt
projects/stub/: CMakeLists.txt  dllmain.c  stub.def
projects/stub/dinput8/: dinput8.c  dinput8.h
